# pocketsage

./: .env.example  .gitignore  .pre-commit-config.yaml  BUTTON_TEST_RESULTS.md  CONTRIBUTING.md  DEV_NOTES.md  DIALOG_IMPLEMENTATION_STATUS.md  FEATURE_IMPLEMENTATION_SUMMARY.md  HOMEBANK_MENU_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MISSING_FEATURES_GUIDE.md  Makefile  PR_SUMMARY.md  PocketSage.spec  PocketSage_Demo_Script.md  QUICKFIX.md  README.md  ROADMAP.md  TODO.md  VERBOSE_LOGGING.md  agents.md  pyproject.toml  requirements.txt  run.py  run_desktop.py  run_desktop_verbose.py  run_verbose.bat  sitecustomize.py  test_add_popup_ui.py  test_all_buttons.py  test_auth.py  test_menubar.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  db.py  models.py  routes.py
app/templates/: admin.html  base.html  habits.html  ledger.html  liabilities.html  portfolio.html
docs/: FLET_ARCHITECTURE.md  POCKETSAGE_MASTER_TODO.md  TESTING_INFRASTRUCTURE.md  admin_operations.md  architecture.md  code_review.md  configuration.md  demo_script.md  manual_test_plan.md  milestones.md  ops_guide.md  ops_runbook.md  packaging.md  qa_roadmap.md  release_checklist.md  release_notes.md  runbook.md  system_overview.md  troubleshooting.md  ui_inspiration.md
docs/assets/: README.md
docs/communication/: ui_brief_share.md
docs/uml/: classes_PocketSage.mmd  classes_PocketSage.puml  packages_PocketSage.mmd  packages_PocketSage.puml  pocketsage_uml_diagrams.docx  seq_add_transaction.puml  seq_import_csv.puml  usecases.puml
installer/: PocketSage.iss
notes/: CURRENT_STATE.md  ROADMAP.md
pocketsage/: __init__.py  cli.py  config.py  extensions.py
pocketsage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample_data/: transactions.csv
scripts/: build_desktop.bat  build_desktop.sh  build_uml_doc.py  gen-uml.ps1  generate_heavy_transactions_csv.py  seed.py  seed_demo.py  setup.sh
tests/: README.md  conftest.py  test_add_data_categories.py  test_add_navigation.py  test_admin_backup_restore.py  test_admin_jobs.py  test_admin_seed.py  test_admin_tasks.py  test_app_megaflow.py  test_budgeting.py  test_budgeting_service.py  test_button_actions.py  test_button_wiring.py  test_csv_import_comprehensive.py  test_csv_imports.py  test_debt_calculations.py  test_debt_payoff_chart.py  test_debts.py  test_debts_view.py  test_desktop_actions.py  test_desktop_navigation.py  test_desktop_smoke.py  test_export_csv.py  test_habit_streaks.py  test_holding_repo_resilience.py  test_import_and_portfolio.py  test_import_services.py  test_integration_workflows.py  test_ledger_edit_delete.py  test_ledger_filters.py  test_ledger_repository.py  test_ledger_routes.py  test_ledger_view.py  test_logging.py  test_money_representation.py  test_performance.py  test_repositories.py  test_routes_smoke.py  test_seed_coverage.py  test_smoke.py  (+4 more)
(+175 files in other folders)
