[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketsage"
version = "0.1.0"
description = "Offline desktop finance and habit tracking app built with Flet and SQLModel."
readme = "README.md"
authors = [{ name = "PocketSage Framework Owner" }]
requires-python = ">=3.11,<3.13"
dependencies = [
	"argon2-cffi==23.1.0",
	"cryptography==43.0.1",
	"flet>=0.24.0",
	"matplotlib==3.8.4",
	"pandas==2.2.2",
	"pydantic==2.8.2",
	"python-dotenv==1.0.1",
	"sqlalchemy==2.0.32",
	"sqlmodel==0.0.16",
]

[project.optional-dependencies]
watcher = ["watchdog>=3.0.0"]
dev = [
	"black==24.8.0",
	"pytest==8.2.0",
	"pytest-cov==5.0.0",
	"pytest-xdist==3.6.1",
	"ruff==0.6.2",
	"pre-commit==3.8.0",
	"bandit[toml]==1.7.9",
]

[project.urls]
Homepage = "https://github.com/Blood-Dawn/pocketsage"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["pocketsage", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks performance tests",
]

[tool.coverage.run]
source = ["src/pocketsage"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
